# sbom-scanner

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  C_CPP_EMBEDDED_SUPPORT.md  FLOWCHART.md  GET_STARTED.txt  GITHUB_UPLOAD_GUIDE.md  LICENSE  PROJECT_CAPABILITIES.txt  PROJECT_STATS.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_GITHUB_SETUP.txt  README.md  USAGE.md  WINDOWS_QUICKSTART.txt  WINDOWS_SETUP.md  config.example.yaml  install.ps1  install.sh  requirements.txt  run_sbom_scan.bat  run_sbom_scan.ps1  setup.py  test_scanner.bat  test_scanner.ps1  test_scanner.py
examples/: example_usage.ps1  example_usage.py
examples/embedded_project/: CMakeLists.txt  conanfile.txt  platformio.ini
examples/multi_language_project/: go.mod  requirements.txt
sbom_scanner/: __init__.py  cli.py  cyclonedx_generator.py  models.py  scanner.py
sbom_scanner/detectors/: __init__.py  arduino_detector.py  base.py  cmake_detector.py  composer_detector.py  conan_detector.py  go_detector.py  gradle_detector.py  maven_detector.py  mbed_detector.py  npm_detector.py  nuget_detector.py  platformio_detector.py  python_detector.py  ruby_detector.py  rust_detector.py  vcpkg_detector.py
